--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,12 @@
 dir.development=./
 dir.mcp=${dir.development}forge/mcp
 version.minecraft=1.7.10
-version.forge=10.13.2.1230
-version.resonantengine=3.3.+
+version.forge=10.13.4.1614
+version.resonantengine=3.3.0.437
 version.cclib=1.1.1.99
-version.cccore=1.0.3.25
+version.cccore=1.0.7.47
 version.fmp=1.1.0.300
-version.nei=1.0.3.51
+version.nei=1.0.5.120
 version.mod.major=0
 version.mod.minor=3
 version.mod.revis=5
