--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,10 @@ repositories {
         name = "ic2"
         url = "http://maven.ic2.player.to/"
     }
+    maven {
+        name = "curse"
+        url = "https://www.cursemaven.com/"
+    }
 }
 
 dependencies {
@@ -145,4 +149,5 @@ dependencies {
     compile "codechicken:NotEnoughItems:${config.version.minecraft}-${config.version.nei}:dev"
     compile "mcp.mobius.waila:Waila:1.5.8_dev3_1.7.10"
     compile "net.industrial-craft:industrialcraft-2:2.2.654-experimental:dev"
+    compile "curse.maven:ftbu-237102:2291494"
 }
