--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ repositories {
     }
     maven {
         name = "forge"
-        url = "https://files.minecraftforge.net/maven"
+        url = "https://nexus.covers1624.net/service/rest/repository/browse/maven-hosted"
     }
     maven {
         name "Mobius Repo"
