Rename Mirror (simple), Fix Imprinter Array OutOfBoundsException
Rename Mirror (simple), Fix Imprinter Array OutOfBoundsException

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,14 @@ output/
 *.idea/
 *.iml
 .metadata/
+
+###Minecraft
+asm
+config
+crash-reports
+local
+modpack
+saves
+stats
+options.txt
+usernamecache.json
